--- a/CAPS.html
+++ b/CAPS.html
@@ -9,7 +9,7 @@
 
 
 <body>
-    <!-- <a href = "">Skip to Main Content</a> -->
+    <a href = "#main">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
@@ -23,7 +23,7 @@
     </header>
 
 
-    <main>
+    <main id="main">
         <h1>Welcome to Counseling and Psychological Services (CAPS)</h1>
         <p>We are happy to offer both in-person and virtual services. CAPS is committed to creating an environment based on our values of multicultural, multi-disciplinary and multi-theoretical practices that allow our diverse student body to access care, receive high quality services and take positive pathways to mental health. <br>
             Our Front Desk (Michigan Union 4th Floor) is open and ready to help support you -- staff members are available throughout the day to assist you with your needs to answer questions, and get you to the right place. We can be reached by phone at: (734) 764-8312.</p>
