--- a/first_gen.html
+++ b/first_gen.html
@@ -6,7 +6,7 @@
     <title>First Gen</title>
 </head>
 <body>
-    <a href = "">Skip to Main Content</a>
+    <a href = "#main">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
@@ -19,7 +19,7 @@
         <h1>First Generation at UMSI</h1>
 
     </header>
-    <main>
+    <main id="main">
         <h1>Am I a first-generation college student?</h1>
         <div>
             <p>At the University of Michigan, undergraduates and graduate students are considered first-generation college students if neither parent or guardian has completed a 4-year college or university degree.<br>
