--- a/food_pantry.html
+++ b/food_pantry.html
@@ -6,7 +6,7 @@
     <title>Food Pantry</title>
 </head>
 <body>
-    <a href = "">Skip to Main Content</a>
+    <a href = "#main">Skip to Main Content</a>
     <header>
         <nav>
             <ul>
@@ -19,7 +19,7 @@
         <h1>Food Pantry at UMSI</h1>
 
     </header>
-    <main>
+    <main id="main">
         <h1>WELCOME TO MAIZE & BLUE CUPBOARD</h1>
         <h2>OUR MISSION</h2>
         <div>
