--- a/first_gen.html
+++ b/first_gen.html
@@ -25,7 +25,7 @@
             <p>At the University of Michigan, undergraduates and graduate students are considered first-generation college students if neither parent or guardian has completed a 4-year college or university degree.<br>
                 <img src="images/MCOMMONS-Move-In-21.jpg.jpg" width="1000" alt="MCOMMONS-Move-In-21"><br>
                 This definition includes students with other family members (siblings, cousins, grandparents, etc.) who have completed a four-year degree. </p>
-                <img src="images/MCOMMONS Spring Commencement 2024-66.jpg" width="1000" alt="MCOMMONS Spring Commencement 2024-66">
+                <img src="images/MCOMMONS_Spring_Commencement_2024-66.jpg" width="1000" alt="MCOMMONS_Spring_Commencement_2024-66">
         </div>
         <h2>First-Generation Gateway Hours and Location:</h2>
         <p>Summer Hours: Monday – Friday 9:00 – 3:00 PM <br>
