--- a/food_pantry.html
+++ b/food_pantry.html
@@ -29,7 +29,7 @@
 
         <h1>MAKE AN APPOINTMENT NOW</h1>
         <p>Shopping at the Maize and Blue Cupboard is by appointment only.  Please make an appointment by visiting our sign up page here here.<br></p>
-        <img src="images/MCOMMONS DSC03486.jpg" width="1000" alt="MCOMMONS DSC03486"><br>
+        <img src="images/MCOMMONS_DSC03486.jpg" width="1000" alt="MCOMMONS_DSC03486"><br>
 
     
         <div></div>
