--- a/CAPS.html
+++ b/CAPS.html
@@ -27,7 +27,7 @@
         <h1>Welcome to Counseling and Psychological Services (CAPS)</h1>
         <p>We are happy to offer both in-person and virtual services. CAPS is committed to creating an environment based on our values of multicultural, multi-disciplinary and multi-theoretical practices that allow our diverse student body to access care, receive high quality services and take positive pathways to mental health. <br>
             Our Front Desk (Michigan Union 4th Floor) is open and ready to help support you -- staff members are available throughout the day to assist you with your needs to answer questions, and get you to the right place. We can be reached by phone at: (734) 764-8312.</p>
-            <img src="images/MCOMMONS-Michigan Union.jpg" width="1000" alt="MCOMMONS-Michigan Union">
+            <img src="images/MCOMMONS-Michigan_Union.jpg" width="1000" alt="MCOMMONS-Michigan_Union">
         
             <h2>Individual Peer Counseling</h2>
             <img src="images/UMSI_DesignJam_GreatLakesWaterSafety_03.jpg" width="1000" alt="UMSI_DesignJam_GreatLakesWaterSafety_03">
