--- a/first_gen.html
+++ b/first_gen.html
@@ -3,22 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>First Gen</title>
 </head>
 <body>
-    <a href = "#main">Skip to Main Content</a>
-    <header>
-        <nav>
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "food_pantry.html">Food Pantry</a></li>
-                <li><a href = "CAPS.html">CAPS</a></li>
-                <li><a href = "first_gen.html">First Gen</a></li>
-            </ul>
-        </nav>
-        <h1>First Generation at UMSI</h1>
+    <div class="skip"><a href = "#main">Skip to Main Content</a></div>
 
+    <header>
+        <div class="guide">
+            <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" class="logo" alt="UMSI Logo">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="food_pantry.html">Food Pantry</a></li>
+                <li><a href="CAPS.html">CAPS</a></li>
+                <li><a>First Gen</a></li>
+            </ul>
+        </div>
+        <h1>First Generation at UMSI</h1>
     </header>
+
     <main id="main">
         <h1>Am I a first-generation college student?</h1>
         <div>
