--- a/CAPS.html
+++ b/CAPS.html
@@ -3,22 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>CAPS</title>
 </head>
 
 
 
 <body>
-    <a href = "#main">Skip to Main Content</a>
+    <div class="skip"><a href = "#main">Skip to Main Content</a></div>
+
     <header>
-        <nav>
+        <div class="guide">
+            <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" class="logo" alt="UMSI Logo">
             <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "food_pantry.html">Food Pantry</a></li>
-                <li><a href = "CAPS.html">CAPS</a></li>
-                <li><a href = "first_gen.html">First Gen</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="food_pantry.html">Food Pantry</a></li>
+                <li><a>CAPS</a></li>
+                <li><a href="first_gen.html">First Gen</a></li>
             </ul>
-        </nav>
+        </div>
         <h1>CAPS at UMSI</h1>
     </header>
 
