--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
     <title>Student Success Portal</title>
 </head>
 <body>
-    <a href = "#main">Skip to Main Content</a>
-    <header>
-        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-        <nav>
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "food_pantry.html">Food Pantry</a></li>
-                <li><a href = "CAPS.html">CAPS</a></li>
-                <li><a href = "first_gen.html">First Gen</a></li>
-            </ul>
-        </nav>
-        <h1>Student Success Portal</h1>
+    <div class="skip"><a href = "#main">Skip to Main Content</a></div>
 
+   <header>
+    <div class="guide">
+        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" class="logo" alt="UMSI Logo">
+        <ul>
+            <li><a>Home</a></li>
+            <li><a href="food_pantry.html">Food Pantry</a></li>
+            <li><a href="CAPS.html">CAPS</a></li>
+            <li><a href="first_gen.html">First Gen</a></li>
+        </ul>
+    </div>
+    <h1>Student Success Portal</h1>
     </header>
+
     <main id="main">
         <section>
             <h2>Welcome to the UM Grad Success Navigator</h2>
