--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="css/reset.css"> -->
     <link rel="stylesheet" href="css/style.css">
     <title>Student Success Portal</title>
 </head>
@@ -14,12 +13,12 @@
     <div class="guide">
         <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" class="logo" alt="UMSI Logo">
         <ul>
-            <li><a>Home</a></li>
+            <li><a class="current-page">Home</a></li> 
             <li><a href="food_pantry.html">Food Pantry</a></li>
             <li><a href="CAPS.html">CAPS</a></li>
             <li><a href="first_gen.html">First Gen</a></li>
         </ul>
-    </div>
+    </div>    
     <h1>Student Success Portal</h1>
     </header>
 
@@ -88,7 +87,7 @@
             <!-- <article> -->
 
             <!-- </article> -->
-            <ul>
+            <ul class="ulgrid">
                 <li><strong>Student Organizations:</strong> Join one of the many student organizations to connect with peers who share your interests and passions.</li>
                 <li><strong>Arts and Culture:</strong> Explore UM's vibrant arts scene with events, exhibitions, and performances happening year-round.</li>
                 <li><strong>Career Services:</strong> Utilize career counseling, job search resources, and networking opportunities to prepare for your professional future.</li>
@@ -100,7 +99,12 @@
         UMGPT. (2024). UMGPT (August 29th version) [Large language model]. -->
     </main>
     <footer>
-        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
-        </footer>
+        <p>MSI Academic Advising © Copyrights <span id="year"></span> | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
+    </footer>
 </body>
 </html>
+
+
+<script>
+    document.getElementById("year").innerHTML = new Date().getFullYear();
+</script>
