--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
     <div class="container">
         <h1>404 - Page Not Found</h1>
         <p>Oops! The page you’re looking for doesn’t exist.</p>
-        <p><a href="/">Go back to the homepage</a></p>
+        <p><a href="index.html">Go back to the homepage</a></p>
     </div>
 </body>
 </html>
