--- a/food_pantry.html
+++ b/food_pantry.html
@@ -23,13 +23,13 @@
     </header>
 
     <main id="main">
-        <h2>OUR MISSION</h2>
+        <h2>Our Mission</h2>
         <div>
             <p>To ensure members of the University of Michigan community—whether on a tight budget or physically restrained from getting to a grocery store—receive equitable access to healthy, nutritious, and nourishing food and the ability to prepare it for themselves or others. </p>
             <img src="images/MCOMMONS-CampusFarmStandOpening-01.jpg.jpg" alt="MCOMMONS-CampusFarmStandOpening-01"><br>
         </div>
 
-        <h1>MAKE AN APPOINTMENT NOW</h1>
+        <h2>Make an Appointment Now</h2>
         <p>Shopping at the Maize and Blue Cupboard is by appointment only.  Please make an appointment by visiting our sign up page here here.<br></p>
         <img src="images/MCOMMONS_DSC03486.jpg" alt="MCOMMONS_DSC03486"><br>
 
